# 2023_Analysis_zephyr

./: .gitignore  ProjectAnalysisReport.md  README.md
clang-styling/: README.md  host_clang_suggestions.diff  run_style_check.sh  run_tidy_check.sh
patches/: README.md  bt_crypto.patch  cs_error_handling.patch  memleak_demo_all_leaks.patch  memleak_demo_initial.patch  memleak_demo_no_optimize.patch  nsi_cleanup.patch  userchan_fix_uninit_access.patch
profiling/: run_profiling.sh  run_profiling_parametrized.sh
profiling/psa_decrypt_test/results/: psa_decrypt_test_128bit_CTR  psa_decrypt_test_128bit_CTR.old  psa_decrypt_test_128bit_CTR_stat  psa_decrypt_test_128bit_GCM  psa_decrypt_test_128bit_GCM.old  psa_decrypt_test_128bit_GCM_stat  psa_decrypt_test_256bit_CTR  psa_decrypt_test_256bit_CTR.old  psa_decrypt_test_256bit_CTR_stat  psa_decrypt_test_256bit_GCM  psa_decrypt_test_256bit_GCM.old  psa_decrypt_test_256bit_GCM_stat
profiling/psa_decrypt_test/src/: 0000000000000001.psa_its  main.c
profiling/psa_encrypt_test/: testcase.yaml
profiling/psa_key_persistence_test/: prj.conf
testing/: README.md
testing/integration/: output_parser.sh  run_tests.sh
testing/integration/bt_crypto/: CMakeLists.txt  prj.conf  testcase.yaml
testing/integration/bt_crypto/src/: test_crypto.c
testing/unit/: run_tests.sh  run_unit_tests.sh
testing/unit/bt_le_cs_security_enable/: CMakeLists.txt  testcase.yaml
testing/unit/bt_le_cs_security_enable/mocks_unit_tests/: net_buf.c  net_buf.h
testing/unit/bt_le_cs_security_enable/src/: main.c
testing/unit/channel_sounding_behavior/: CMakeLists.txt  testcase.yaml
testing/unit/channel_sounding_behavior/mocks_unit_tests/: conn.c  hci_core.c  net_buf.h
testing/unit/channel_sounding_behavior/src/: error_handling.c  main.c
twister_reports/: README.md
unit_testing/: README.md
valgrind/: README.md  run_adv.sh  run_beacon_valgrind.sh  run_scan.sh
valgrind/memcheck/: README.md  run_babblesim.sh  run_ext_adv_valgrind.sh  run_heartrate_periph_memcheck.sh
(+187 files in other folders)
